--- a/SpotTheScam/User/User.Master
+++ b/SpotTheScam/User/User.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Main.master.cs" Inherits="SpotTheScam.Main" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.master.cs" Inherits="SpotTheScam.User.User" %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,23 +13,23 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="Default.aspx">SpotTheScam</a>
+                <a class="navbar-brand" href="UserHome.aspx">SpotTheScam</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="Default.aspx">Home</a>
+                            <a class="nav-link" href="UserHome.aspx">Home</a>
                         </li>
 
                         <!-- For GUESTS ONLY -->
                         <asp:PlaceHolder ID="phGuest" runat="server" Visible="false">
                             <li class="nav-item">
-                                <a class="nav-link" href="Register.aspx">Register</a>
+                                <a class="nav-link" href="UserRegister.aspx">Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Login.aspx">Login</a>
+                                <a class="nav-link" href="UserLogin.aspx">Login</a>
                             </li>
                         </asp:PlaceHolder>
 
@@ -41,7 +41,7 @@
                                 </span>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link btn btn-sm btn-danger text-white ms-2" href="Logout.aspx">
+                                <a class="nav-link btn btn-sm btn-danger text-white ms-2" href="UserLogout.aspx">
                                     Logout
                                 </a>
                             </li>
