Redesigned the UserRegister page with new UI inline with the design from FIgma , added Email and Confirm Password fields
Resolved multiple ASP.NET parser and runtime errors

--- a/SpotTheScam/User/User.Master
+++ b/SpotTheScam/User/User.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.master.cs" Inherits="SpotTheScam.User.User" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="User.master.cs" Inherits="SpotTheScam.User.UserMaster" %>
 
 <!DOCTYPE html>
 <html lang="en">
