--- a/SpotTheScam/Staff/Staff.Master
+++ b/SpotTheScam/Staff/Staff.Master
@@ -1,5 +1,4 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Staff.master.cs" Inherits="SpotTheScam.Staff.Staff" %>
-
 <!DOCTYPE html>
 <html lang="en">
 <head runat="server">
@@ -9,7 +8,6 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <form id="form1" runat="server" class="flex-grow-1 d-flex flex-column">
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="StaffDashboard.aspx">SpotTheScam Staff</a>
@@ -26,6 +24,9 @@
                                 <a class="nav-link" href="ManageUsers.aspx">Manage Users</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="StaffExpertWebinar.aspx">Expert Webinars</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link btn btn-sm btn-danger text-white ms-2" href="StaffLogout.aspx">Logout</a>
                             </li>
                         </asp:PlaceHolder>
@@ -33,17 +34,13 @@
                 </div>
             </div>
         </nav>
-
         <div class="container mt-4 flex-grow-1">
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
+            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
         </div>
-
         <footer class="bg-dark text-white text-center p-3 mt-auto">
             &copy; <%: DateTime.Now.Year %> SpotTheScam Staff Panel
         </footer>
-
     </form>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
