--- a/SpotTheScam/User/User.Master
+++ b/SpotTheScam/User/User.Master
@@ -148,6 +148,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Transactions.aspx">Transaction Logs</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="ExpertWebinarHomepage.aspx">Expert Webinar Session</a>
+                </li>
               </ul>
 
               <!-- Right Buttons -->
