--- a/SpotTheScam/User/User.Master
+++ b/SpotTheScam/User/User.Master
@@ -143,7 +143,8 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="Blogs.aspx">Blogs & Forum</a>
+                  <a class="nav-link" href="CreateBlog.aspx">Blogs & Forum</a>
+
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="UserTransactionLogs.aspx">Transaction Logs</a>
