--- a/SpotTheScam/User/User.Master
+++ b/SpotTheScam/User/User.Master
@@ -172,12 +172,15 @@
 
                         <!-- For LOGGED-IN USERS ONLY -->
                         <asp:PlaceHolder ID="phUser" runat="server" Visible="false">
-                            <li class="nav-item d-flex align-items-center me-3">
-                                <span class="fw-bold text-dark">👋 Welcome,
-                                    <asp:Label ID="lblUsername" runat="server" /></span>
-                            </li>
-                            <li class="nav-item">
-                                <a href="UserLogout.aspx" class="btn btn-outline-danger">Logout</a>
+                            <li class="nav-item dropdown me-3">
+                                <a class="nav-link dropdown-toggle fw-bold text-dark" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    👋 Welcome, <asp:Label ID="lblUsername" runat="server" />
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                                    <li><a class="dropdown-item" href="UserProfile.aspx">Profile Settings</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-danger" href="UserLogout.aspx">Logout</a></li>
+                                </ul>
                             </li>
                         </asp:PlaceHolder>
                     </ul>
@@ -186,7 +189,7 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="container mt-4 flex-grow-1">
+        <div class="main-content-area" style="width:100%;padding:0;margin:0;">
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
         </div>
 
